made several essential classes for the game